--- a/app/src/main/res/layout/overview_graphs_layout.xml
+++ b/app/src/main/res/layout/overview_graphs_layout.xml
@@ -13,7 +13,7 @@
         <com.jjoe64.graphview.GraphView
             android:id="@+id/bg_graph"
             android:layout_width="wrap_content"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:contentDescription="@string/a11y_graph" />
 
         <ImageButton
